--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,6 +17,7 @@
         {{ include('menu.html.twig') }}
         {% block body %}
         {% endblock %}
+        {{ include('footer.html.twig') }}
         {% block javascripts %}
             <script src="{{ asset('js/menu.js') }}"></script>
         {% endblock %}
