add page marques

--- a/app/Resources/views/marques.html.twig
+++ b/app/Resources/views/marques.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+    <p><img id="image-marques" src="{{ asset('img/marques.png') }}"></p>
+
 {% endblock %}
 
 {% block stylesheets %}
