--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -24,7 +24,7 @@
         <div class="items-nav-footer">
             <a href="{{ path('need_home') }}"><h5>Accueil</h5></a>
             <div class="cache">
-                <a href=""><h5>Homme</h5></a>
+                <a href="{{ path('need_homme') }}"><h5>Homme</h5></a>
                 <ul>
                     <a href=""><li>Doudounes</li></a>
                     <a href=""><li>Vestes</li></a>
@@ -52,7 +52,7 @@
                 </ul>
             </div>
             <div class="cache">
-                <a href=""><h5>Marques</h5></a>
+                <a href="{{ path('need_marques') }}"><h5>Marques</h5></a>
                 <ul>
                     <a href=""><li>SCOTCH&SODA</li></a>
                     <a href=""><li>ANTHONY MORATO</li></a>
@@ -68,7 +68,7 @@
                     <a href=""><li>Voir plus....</li></a>
                 </ul>
             </div>
-            <a class="cache" href=""><h5>À propos</h5></a>
+            <a class="cache" href="{{ path('need_about') }}"><h5>À propos</h5></a>
             <a href=""><h5>Nous contacter</h5></a>
         </div>
         <div class="follow-footer">
