add responsive page about plus title

--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -22,9 +22,14 @@
         </li>
     </ul>
 
-    <div>
+    <div id="container-news">
         <div class="header-news">
             <div class="line"></div><h3>Nouveautés</h3><div class="line"></div>
+        </div>
+        <div class="arrow">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
         <div class="content-news slider-news">
             <div class="items-news">
