--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -69,7 +69,7 @@
                 </ul>
             </div>
             <a class="cache" href="{{ path('need_about') }}"><h5>À propos</h5></a>
-            <a href=""><h5>Nous contacter</h5></a>
+            <a href="{{ path('need_contact') }}"><h5>Nous contacter</h5></a>
         </div>
         <div class="follow-footer">
             <h5>Nous suivre</h5>
