--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -68,7 +68,7 @@
                 <a href="{{ path('need_about') }}" class="nav-link"><span>Á propos</span></a>
             </li>
             <li class="nav-item active">
-                <a href="#" class="nav-link"><span>Contact</span></a>
+                <a href="{{ path('need_contact') }}" class="nav-link"><span>Contact</span></a>
             </li>
         </ul>
 
