--- a/web/css/style.css
+++ b/web/css/style.css
@@ -501,8 +501,14 @@ body{
     margin: auto;
 }
 
+#title-about{
+    text-align: center;
+    font-weight: 600;
+}
+
 #content-map-about{
-    margin-right: 50px;
+    /*margin-right: 50px;*/
+    margin: auto;
 }
 
 #map-about{
@@ -512,24 +518,20 @@ body{
 }
 
 #image-marques{
-    width: 100%;
-}
-
-#content-about{
-    display: flex;
+    width: 98%;
 }
 
 .items-about{
     text-align: center;
     font-size: 18px !important;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .content-image-about{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    width: 60%;
-    margin: 100px auto;
+    width: 98%;
+    margin: 100px auto 0 auto;
 }
 
 .content-image-about img{
@@ -713,6 +715,51 @@ body{
         display: inline-block !important;
     }
 
+    #container-news{
+        position: relative;
+        overflow: hidden;
+    }
+
+    .arrow{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        display: flex !important;
+        flex-direction: row-reverse;
+        width: 95%;
+        z-index: 999;
+    }
+    .arrow span{
+        display: block;
+        width: 30px;
+        height: 30px;
+        border-bottom: 5px solid #828282;
+        border-right: 5px solid #828282;
+        transform: rotate(135deg);
+        margin: -10px;
+        animation: animate 2s infinite;
+    }
+    .arrow span:nth-child(2){
+        animation-delay: -0.2s;
+    }
+    .arrow span:nth-child(3){
+        animation-delay: -0.4s;
+    }
+    @keyframes animate {
+        0%{
+            opacity: 0;
+            transform: rotate(135deg) translate(-20px,-20px);
+        }
+        50%{
+            opacity: 1;
+        }
+        100%{
+            opacity: 0;
+            transform: rotate(135deg) translate(20px,20px);
+        }
+    }
+
     .items-news{
         /*width: calc(4%) !important;*/
     }
@@ -805,4 +852,18 @@ body{
         position: sticky;
         top: 90px;
     }
+
+    #content-about{
+        display: flex;
+        margin-bottom: 50px;
+    }
+
+    .content-image-about{
+        width: 60%;
+    }
+
+    #content-map-about{
+        margin-right: 50px;
+    }
+
 }
