add debut par contact

--- a/app/Resources/views/contact.html.twig
+++ b/app/Resources/views/contact.html.twig
@@ -1,7 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
+    <div class="content-form-contact">
+        <input type="text" placeholder="Nom">
+        <input type="text" placeholder="Prénom">
+        <input type="email" placeholder="Email">
+        <textarea></textarea>
+    </div>
 {% endblock %}
 
 {% block stylesheets %}{% endblock %}
