--- a/app/Resources/views/about.html.twig
+++ b/app/Resources/views/about.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-    <h2 id="title-about">Á propos de nous</h2>
-    <p class="items-about">Need est une boutique multi marques de prêt-à-porter pour femmes et hommes, basé dans le centre de Montpellier, en face de la place Jean Jaurès </p>
+    <h2 id="title-about">À propos de nous</h2>
+    <p class="items-about">Need est une boutique multi marques de prêt-à-porter pour femmes et hommes, basée dans le centre de Montpellier, en face de la place Jean Jaurès. </p>
     <div id="content-about">
         <div class="content-image-about">
             <p><img src="{{ asset('img/about_1.jpg') }}"></p>
