--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -65,7 +65,7 @@
                 </div>
             </li>
             <li class="nav-item active">
-                <a href="{{ path('need_about') }}" class="nav-link"><span>Á propos</span></a>
+                <a href="{{ path('need_about') }}" class="nav-link"><span>À propos</span></a>
             </li>
             <li class="nav-item active">
                 <a href="{{ path('need_contact') }}" class="nav-link"><span>Contact</span></a>
