add contact page plus begin of style

--- a/app/Resources/views/contact.html.twig
+++ b/app/Resources/views/contact.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+    <h2>Nous contactez</h2>
     <div class="content-form-contact">
-        <input type="text" placeholder="Nom">
-        <input type="text" placeholder="Prénom">
-        <input type="email" placeholder="Email">
-        <textarea></textarea>
+        <input class="items-contact" type="text" placeholder="Nom">
+        <input class="items-contact" type="text" placeholder="Prénom">
+        <input class="items-contact" type="email" placeholder="Email">
+        <textarea rows="6" class="items-contact" placeholder="Message"></textarea>
     </div>
 {% endblock %}
 
