--- a/web/css/style.css
+++ b/web/css/style.css
@@ -548,26 +548,32 @@ body{
     margin-top: -50px;
 }
 
-.content-form-contact {
+.content-contact{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 0.2fr 1fr;
+    text-align: center;
+}
+
+#or-contact{
+    font-weight: 600;
+}
+
+.content-form-contact form{
     display: flex;
     flex-direction: column;
     width: 90%;
     margin: auto;
+    margin-bottom: 50px;
 }
 
-.items-contact{
-    margin: 10px 0;
-    /*border-radius: 5px;*/
-    border: none;
-    border-bottom: solid 1px black;
+#title-contact{
+    text-align: center;
+    font-weight: 600;
 }
 
-.items-contact:last-child{
+#inputMessage{
     resize: none;
-}
-
-.items-contact:focus{
-    border-bottom: solid 2px #af5e25;
 }
 
 @media (min-width: 500px) {
@@ -887,5 +893,16 @@ body{
     #content-map-about{
         margin-right: 50px;
     }
+
+    .content-contact{
+        margin-top: 50px;
+        grid-template-columns: 1fr 0.2fr 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    #or-contact{
+        margin: auto;
+    }
+
 
 }
