add page panier begin

--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -74,9 +74,9 @@
 
     </div>
     <div class="connexion-shoppingcard">
-        <p><a class="nav-link initial user-logo"><img src="{{ asset('img/user.png') }}"></a></p>
+        <p><a href="" class="nav-link initial user-logo"><img src="{{ asset('img/user.png') }}"></a></p>
         <div id="shopping-cart">
-            <a class="nav-link"><p><img src="{{ asset('img/shopping-cart-vide.png') }}"></p></a>
+            <a href="{{ path('need_panier') }}" class="nav-link"><p><img src="{{ asset('img/shopping-cart-vide.png') }}"></p></a>
             <div id="notification-icon">
                 <span>
                     <span id="count">0</span>
