--- a/web/css/style.css
+++ b/web/css/style.css
@@ -469,7 +469,6 @@ body{
 
 .connexion-button:hover{
     border-bottom: solid 1px #af5e25;
-
 }
 
 #notification-icon{
@@ -600,6 +599,20 @@ body{
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
+.item-taille-panier{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.item-taille-panier p{
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: initial;
+    display: flex ;
+    margin-right: 10px;
+}
+
 .container-quantite-panier{
     display: flex;
 }
@@ -636,7 +649,7 @@ body{
 
 .img-panier{
     height: auto;
-    width: 120px;
+    width: 250px;
 }
 
 #total-panier{
@@ -666,34 +679,32 @@ tfoot{
     display: inline-block;
 }
 
-.panier{
-    margin: 30px;
-}
-
 thead th{
     border-bottom: 1px !important;
 }
 
-.table{
-    width: 70% !important;
+.table thead{
+    display: none;
 }
 
-thead{
-    color: #696969ba !important;
+.table tbody{
+    display: block;
+    width: 100vw;
 }
 
 .table td, .table th{
-    border-bottom: solid 1px #6969692e  !important;
-    border-top: none !important;
+    border: none !important;
 }
-
 
 .table td{
     vertical-align: middle !important;
+    margin: auto;
 }
 
 .table tr{
-    margin: 10px;
+    display: flex !important;
+    flex-direction: column;
+    text-align: center;
 }
 
 .cross-item-panier{
@@ -702,9 +713,46 @@ thead{
     cursor: pointer;
 }
 
+.container-panier{
+    width: 100%;
+}
+
+.table{
+    width: auto !important;
+}
+
+.container-resume-panier {
+    font-size: 20px;
+    margin-top: 25px;
+    width: auto;
+    margin: 20px;
+}
+
 .container-resume-panier h3{
+    margin-bottom: 30px;
+    font-weight: 600;
     border-bottom: solid 1px black;
 }
+
+.container-resume-panier span{
+    float: right;
+    margin-left: 100px;
+}
+
+#livraison-panier{
+    margin-bottom: 0;
+}
+
+#commentaire-livraison-panier{
+    color: gray;
+    margin-top: 0;
+    font-size: 12px;
+    padding: 0;
+}
+
+
+
+
 
 
 
@@ -781,6 +829,40 @@ thead{
 
     #notification-icon{
         margin-right: 50px;
+    }
+
+    .table{
+        width: auto !important;
+    }
+
+    .table thead{
+        display: table-header-group;
+        color: #696969ba !important;
+    }
+
+    .table tr{
+        display: table-row !important;
+    }
+
+    .table td, .table th{
+        border-bottom: solid 1px #6969692e  !important;
+        border-top: none !important;
+    }
+
+    .table tbody{
+        display: table-row-group;
+    }
+
+    .panier{
+        margin: 30px;
+    }
+
+    .img-panier{
+        width: 120px;
+    }
+
+    .item-taille-panier{
+        display: table-cell;
     }
 }
 
@@ -1052,11 +1134,7 @@ thead{
     .container-resume-panier {
         font-size: 20px;
         margin-top: 25px;
-    }
-
-    .container-resume-panier h3{
-        margin-bottom: 30px;
-        font-weight: 600;
+        width: 25%;
     }
 
     .container-resume-panier span{
@@ -1073,6 +1151,10 @@ thead{
         margin-top: 0;
         font-size: 12px;
         padding: 0;
+    }
+
+    .table{
+        width: 70% !important;
     }
 
 }
